# find-used-icons

./: Cargo.toml  LICENSE  README.md
benches/: bench_search.rs
src/: lib.rs  main.rs
