[package]
name = "find-used-icons"
version = "0.1.1"
authors = ["raymond.mao <raymond.mao@gefasoft.de>"]
edition = "2018"

[lib]
name = "find_used_icons_lib"
path = "src/lib.rs"

[[bin]]
name = "find-used-icons"
path = "src/main.rs"

[dependencies]
walkdir = "2.2"
regex = "1.1"
lazy_static = "1.3"
parking_lot = "0.7"
glob = "0.3"
rayon = "1.0"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "bench_search"
harness = false
